classDiagram
class User {
  +int id
  +str username
  +str? email
  +int points
  +str? role
}

class Task {
  +int id
  +str title
  +str? description
  +str? pdf_path
  +int points
  +datetime? deadline
  +int? created_by
  +datetime? created_at
  +datetime? updated_at
}

class Submission {
  +int id
  +int task_id
  +int student_id
  +datetime submitted_at
  +str? text_content
  +str? pdf_path
  +str? teacher_comment
  +int? awarded_points
  +datetime? awarded_at
}

class TaskAssignment {
  +int id
  +int task_id
  +int student_id
  +int assigned_by
  +datetime assigned_at
}

class ReminderLog {
  +int id
  +int task_id
  +int student_id
  +str reminder_type
  +datetime sent_at
}

class Reward {
  +int id
  +str title
  +str? description
  +int cost
  +int created_by
  +bool active
  +datetime? created_at
  +datetime? updated_at
}

class Purchase {
  +int id
  +int? reward_id
  +int? student_id
  +datetime purchased_at
  +int cost_at_purchase
}

class RewardPurchaseLedger {
  +int id
  +int? purchase_id
  +int? reward_id
  +int? student_id
  +str reward_title
  +str? reward_description
  +int reward_cost
  +int cost_at_purchase
  +str student_username
  +str? student_email
  +int points_before
  +int points_after
  +datetime purchased_at
  +datetime created_at
}

User "1" --> "many" Task : creates
User "1" --> "many" Reward : creates
User "1" --> "many" Submission : submits
User "1" --> "many" Purchase : makes
User "1" --> "many" TaskAssignment : assigned
User "1" --> "many" ReminderLog : receives

Task "1" --> "many" Submission : has
Task "1" --> "many" TaskAssignment : assigned_to
Task "1" --> "many" ReminderLog : reminders

Reward "1" --> "many" Purchase : purchased
Reward "1" --> "many" RewardPurchaseLedger : ledger

Purchase "1" --> "1" RewardPurchaseLedger : logs
